grammar
program:
    | statementList
statementList':
    | "{" statementList "}"
statementList:
    | [expression ";" {expression ";"}]
expressionList:
    | "(" [expression {"," expression}] ")"
expression:
    | expr_2
expr_0:
    | "+" expr_0 | "-" expr_0 | number | string | "(" expression ")"
    | index | call | identifier | functionDefinition | variableDeclaration
expr_1:
    | expr_0 {("%" | "*" | "/" | "//") expr_0}
expr_2:
    | expr_1 {("+" | "-") expr_1}

call:
    | expression expressionList
index:
    | expression "[" expression "]"

identifierList:
    | [identifier {"," identifier}]
functionDefinition:
    | "fn" [identifier] "(" identifierlist ")" statementList'
variableDeclaration:
    | ( "let" | "const" ) identifier [ ":" identifier ] [ "=" expression ]

namespaceDefinition:
    | "::" statementList'

digit: 0-9
lower: a-z
upper: A-Z
alpha: lower | upper
alnum: alpha | digit
identifier: ["::"] (alpha | "_" | "#") {alnum | "_" | "#"}


////////////////////////////////////////////////////
///////////////// EXAMPLE //////////////////////////
////////////////////////////////////////////////////

const X = ::{
// Namespace
  ::STATIC = fn() {

  };

// Will be hidden
  fn xyz() {}
};

X::STATIC();

//
